--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -22,9 +22,9 @@
       <mat-icon>list</mat-icon>
       <span>My Reservation</span>
     </button>
-    <button mat-button class="menu-button" routerLinkActive="active" routerLink="/redemption-report" *ngIf="loginuser.role ==='Buyer'">
+    <button mat-button class="menu-button text-start" routerLinkActive="active" routerLink="/redemption-report" *ngIf="loginuser.role ==='Buyer'">
       <mat-icon>list</mat-icon>
-      <span>Redemption Report</span>
+      <span class="text-start">Redemption Report</span>
     </button>
     <button mat-button class="menu-button" routerLinkActive="active" routerLink="/add" *ngIf="loginuser.role ==='Buyer'">
       <mat-icon>add_circle</mat-icon>
