--- a/apps/drec-angular-ui/src/app/nav/header/header.component.scss
+++ b/apps/drec-angular-ui/src/app/nav/header/header.component.scss
@@ -4,23 +4,24 @@ $tritary: #3f3f3f;
 $gray: #3f3f3f;
 $white: #fff;
 $danger: #f44336;
+$example-header-rgba:rgba(0,0,0,0.1);
 
 
 
 .example-header {
     position: fixed;
     background: $white;
-    color: white;
+    color: $white;
     top: 0;
     left: 0;
     right: 0;
     height: 10px;
-    box-shadow: 3px 0px 33px rgba(0,0,0,0.1);
+    box-shadow: 3px 0px 33px $example-header-rgba;
     z-index: 2;
   }
   .mat-drawer-inner-container
   {
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 15px $example-header-rgba;
     z-index: 999;
   }
   .spacer {
