--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.scss
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.scss
@@ -4,6 +4,10 @@ $tritary: #3f3f3f;
 $gray: #3f3f3f;
 $white: #fff;
 $danger: #f44336;
+$lightgrey:lightgrey;
+$mat-divider-rgba:rgba(255, 255, 255, 0.5);
+$example-sidenav-rgba:rgba(0,0,0,0.1);
+$example-sidenav-rgba-bg:rgba(247, 247, 248, 0.5);
 
 .example-container {
     position: absolute;
@@ -17,7 +21,7 @@ $danger: #f44336;
     align-items: center;
     justify-content: center;
     width: 200px;
-    background: rgba(247, 247, 248, 0.5);
+    background: $example-sidenav-rgba-bg;
   }
   .menu-button {
     width: 100%;
@@ -45,13 +49,13 @@ $danger: #f44336;
   .designation {
     margin-top: 2px;
     font-size: 0.7rem;
-    color: lightgrey;
+    color: $lightgrey;
   }
   
   mat-divider {
     margin-top: 16px;
     margin-bottom: 16px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: $mat-divider-rgba;
   }
 
   .menu-button
@@ -68,7 +72,7 @@ $danger: #f44336;
 
     .example-sidenav
     {
-      box-shadow: 3px 0px 33px rgba(0,0,0,0.1);
+      box-shadow: 3px 0px 33px $example-sidenav-rgba;
       border: none!important;
     }
 
