--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
@@ -1,3 +1,5 @@
+$white: #fff;
+$secondary: #010101;
 .body-bg
 {
     padding: 35px 30px 35px 30px;
@@ -46,3 +48,14 @@
     font-size: 13px;
     margin-left: 4px ;
   }
+  .btn-pad{
+    padding: 1px 6px !important;
+  }
+  // .back-but{
+  //   button{
+  //     background: $secondary !important;
+  //     color: $white !important;
+
+  //   }
+    
+  // }
