columns added to the my-reservation

--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -155,7 +155,7 @@
                         <div class='content'>
                             <div class='column'>
                                 <div class='row '>
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border border-end-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>projectName
                                             </b>:&nbsp;<!--{{item.generationStartTime+'000'| date:'EEE d MMMM y hh:ss'}} - in UTC:-->{{item.projectName}}
@@ -163,40 +163,18 @@
                                         </div>
                                         
                                     </div>
-                        
-                                    <!-- </div>
-                                                    </div> -->
-                                    <!-- <div class='column'>
-                                                        <div class='row'> -->
-
-                                    <!-- <div class="col-3 card">
-                                        <div class="card-cody">
-                                            
-                                        </div>
-                                        
-                                    </div> -->
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border border-end-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>countryCode</b>:&nbsp;<!--{{item.generationEndTime+'000'| date:'EEE d MMMM y hh:ss'}}  - in UTC:-->
                                                 {{item.countryCode}}</p>
                                         </div>
                                         
                                     </div>
-                                    <!--                                     
-                                                        </div>
-                                                    </div> -->
-                                    <!-- <div class='column'>
-                                                        <div class='row'> -->
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border border-end-0">
                                         <div class="card-body d-flex align-items-center"><p><b>Capacity</b>: &nbsp;{{item.capacity}}</p></div>
                                         
                                     </div>
-                                    <!--                                     
-                                                        </div>
-                                                    </div> -->
-                                    <!-- <div class='column'>
-                                                        <div class='row'> -->
-                                    <div class="col-3 card ">
+                                    <div class="col-3 card  card-rad border-end ">
                                         <div class="card-body">
                                             <p><b>createdAt</b>: &nbsp;{{item.createdAt|date:'EEE d MMMM y hh:ss'}}</p>
                                         </div>
@@ -204,13 +182,8 @@
                                     </div>
                         
                                 </div>
-                            </div>
-                        
-                        </div>
-                        <div class='content'>
-                            <div class='column'>
                                 <div class='row'>
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border border-end-0 border border-top-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>offTaker</b>:&nbsp;<!--{{item.generationEndTime+'000'| date:'EEE d MMMM y hh:ss'}}  - in UTC:-->
                                                 {{
@@ -219,24 +192,13 @@
                                         </div>
                                         
                                     </div>
-                                    <!--                                     
-                                                        </div>
-                                                    </div> -->
-                        
-                                    <!-- <div class='column'>
-                                                        <div class='row'> -->
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border-end-0 border border-top-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>deviceTypeCode</b>: &nbsp;{{item.deviceTypeCode}}</p>
                                         </div>
                                         
                                     </div>
-                        
-                                    <!-- </div>
-                                                    </div> -->
-                                    <!-- <div class='column'>
-                                                        <div class='row'> -->
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border-end-0 border border-top-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>fuelCode</b>: &nbsp;{{
                                                 item.fuelCode
@@ -244,12 +206,7 @@
                                         </div>
                                         
                                     </div>
-                        
-                                    <!-- </div>
-                                                    </div> -->
-                                    <!-- <div class='column'>
-                                                        <div class='row'> -->
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border-end border border-top-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>commissioningDate
                                             </b>:&nbsp;{{ item.commissioningDatedate| date:'EEE d MMMM y hh:ss'}}
@@ -259,13 +216,8 @@
                                     </div>
                         
                                 </div>
-                            </div>
-                        
-                        </div>
-                        <div class='content'>
-                            <div class='column'>
                                 <div class='row'>
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border-end-0 border border-top-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>deviceDescription
                                             </b>:&nbsp;{{ item.deviceDescription}}
@@ -273,37 +225,19 @@
                                         </div>
                                         
                                     </div>
-                        
-                                    <!-- </div>
-                                                    </div> -->
-                        
-                        
-                                    <!-- <div class='column'>
-                                                        <div class='row'> -->
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border-end-0 border border-top-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>meterReadtype</b>: &nbsp;{{item.meterReadtype}}</p>
                                         </div>
                                         
                                     </div>
-                        
-                                    <!-- </div>
-                                                    </div> -->
-                                    <!-- <div class='column'>
-                                                        <div class='row'> -->
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border-end-0 border border-top-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>version</b>: &nbsp;{{item.version}}</p>
                                         </div>
                                         
                                     </div>
-                        
-                                    <!-- </div>
-                        
-                                                    </div> -->
-                                    <!-- <div class='column'>
-                                                        <div class='row'> -->
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad border-end border border-top-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>Status</b>: &nbsp;{{item.status}}</p>
                                         </div>
@@ -311,13 +245,8 @@
                                     </div>
                         
                                 </div>
-                            </div>
-                        
-                        </div>
-                        <div class='content'>
-                            <div class='column'>
                                 <div class='row'>
-                                    <div class="col-3 card">
+                                    <div class="col-3 card card-rad  border border-top-0">
                                         <div class="card-body d-flex align-items-center">
                                             <p><b>SDGBenefits</b>:&nbsp;<!--{{item.generationEndTime+'000'| date:'EEE d MMMM y hh:ss'}}  - in UTC:-->
                                                 {{
@@ -329,7 +258,7 @@
                                     
                                 </div>
                             </div>
-
+                        
                         </div>
                     </mat-card-content>
                 </mat-card>
