--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
@@ -51,6 +51,10 @@ $secondary: #010101;
   .btn-pad{
     padding: 1px 6px !important;
   }
+  .card-rad{
+    border-radius: 0px;
+  }
+  // border-right: none !important;
   // .back-but{
   //   button{
   //     background: $secondary !important;
