change in bulk api response and placehoder

--- a/apps/drec-angular-ui/src/app/view/addread/addread.component.html
+++ b/apps/drec-angular-ui/src/app/view/addread/addread.component.html
@@ -35,7 +35,7 @@
                     <mat-form-field appearance="outline">
                         <mat-label>TimeZone</mat-label>
                         <input type="text"
-                               placeholder="Pick one"
+                               placeholder="Please Enter timezone"
                                aria-label="Number"
                                matInput
                                formControlName="timezone"
