new add claim form submit

--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -9,7 +9,7 @@
         <span>Organization</span>
       </button>
 
-      <mat-expansion-panel [class.mat-elevation-z0]="true">
+      <mat-expansion-panel [class.mat-elevation-z0]="true" *ngIf="loginuser.role ==='OrganizationAdmin'">
         <mat-expansion-panel-header>
           Device
         </mat-expansion-panel-header>
